--- a/sprint1-introducao/revisaoProps/package.json
+++ b/sprint1-introducao/revisaoProps/package.json
@@ -9,6 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/dev": "^0.2.3",
+    "@expo-google-fonts/poor-story": "^0.2.3",
+    "@expo-google-fonts/poppins": "^0.2.3",
     "expo": "~50.0.3",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
